hello-reutlingen-dockerized/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-appv1
        image: flyingwhale/hs-reutilingen
        ports:
        - containerPort: 80
        imagePullPolicy: Always
