hello-reutlingen-dockerized/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: hello-app
