hello-reutlingen-dockerized/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
  - host: hs-reutilingen
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-svc
          servicePort: 80
